<resources>
    <string name="app_name">MoneyControl</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpTitle">Create your account</string>
    <string name="date">Date</string>
    <string name="sum">Sum</string>
    <string name="currency">Currency</string>
    <string name="commentary">Commentary</string>
    <string name="add_debit">Add debit</string>
    <string name="add_credit">Add credit</string>
    <string name="button_add">Add</string>
    <string name="value">Value</string>
    <string name="toast_empty_fields">Fields cannot be empty</string>
    <string name="toast_different_pass">Different passwords</string>
    <string name="toast_success_sign_up">You successfully sign up</string>
    <string name="toast_success_sign_in">You successfully sign in</string>
    <string name="toast_wrong_sign_in">User is not logged</string>
</resources>
