<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.domnich.vlad.moneycontrol.controller.SignUpActivity">

    <TextView
        android:id="@+id/textTitle"
        android:text="@string/signUpTitle"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textLogin"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textTitle"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/edTextLogin"
        android:layout_below="@id/textLogin"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textPassword"
        android:text="@string/password"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edTextLogin"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/edTextPass"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_below="@id/textPassword"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textRepeatPass"
        android:text="@string/repeatPassword"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/edTextRepeatPass"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_below="@id/textRepeatPass"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/signUp"
        android:layout_below="@id/edTextRepeatPass"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
